--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ environment:
 
 dependencies:
   progress_dialog: ^1.2.0
+  gradient_app_bar: ^0.0.1
+  gradient_widgets: ^0.5.0
 
   flutter:
     sdk: flutter
